--- a/css/main.css
+++ b/css/main.css
@@ -1801,6 +1801,7 @@ header{
 	padding: 0;
 	position: relative;
 	overflow: hidden;
+	margin: 10px;
 }
 #portfolio .folio-item img {
 	vertical-align: middle;
