--- a/css/main.css
+++ b/css/main.css
@@ -1810,7 +1810,7 @@ header{
 	-webkit-transition: all 0.5s ease-in-out;
 	-ms-transition: all 0.5s ease-in-out;
 	transition: all 0.5s ease-in-out;
-	margin: 10px;
+	margin: 20rem;
 }
 
 #portfolio .overlay {
