--- a/css/main.css
+++ b/css/main.css
@@ -1799,7 +1799,7 @@ header{
 }
 #portfolio .folio-item {
 	padding: 0;
-	margin: 10rem;
+	margin: 10px;
 	position: relative;
 	overflow: hidden;
 	
