--- a/css/main.css
+++ b/css/main.css
@@ -1506,7 +1506,7 @@ header{
 	margin-right: -30px;
 	margin-left: -30px;
 }
-.intro-info img {
+.intro-info video {
 	height: 9rem;
 	width: 9rem;
 	border-radius: 50%;
